# .speakeasy/out.openapi.yaml
@@ -13,7 +13,97 @@ paths:
           description: "unknown return type: ReturnStatement"
           content:
             "application/json": {}
+      x-speakeasy-group: "resources"
+      x-speakeasy-name-override: "create"
+  "/api/v1/features":
+    get:
+      summary: "use to set the summary"
+      description: "use jsdoc tag to set the description"
+      responses:
+        default:
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+        "200":
+          description: "TODO: grab this from jsdoc and add a default"
+          content:
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "features":
+                    type: "object"
+                    properties:
+                      "controlBlocks":
+                        type: "null"
+                        description: "TODO: This is an unknown type"
+                      "realtimeCollaboration":
+                        type: "null"
+                        description: "TODO: This is an unknown type"
+      x-speakeasy-group: "features"
+      x-speakeasy-name-override: "get"
+  "/api/v1/node-overlays":
+    get:
+      summary: "use to set the summary"
+      description: "use jsdoc tag to set the description"
+      responses:
+        default:
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+        "200":
+          description: "TODO: grab this from jsdoc and add a default"
+          content:
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "overlays":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+      x-speakeasy-group: "nodes"
+      x-speakeasy-name-override: "getOverlays"
+  "/api/v1/node-types":
+    get:
+      summary: "use to set the summary"
+      description: "use jsdoc tag to set the description"
+      responses:
+        default:
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+        "200":
+          description: "TODO: grab this from jsdoc and add a default"
+          content:
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "version":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "versions":
+                    type: "array"
+                    example: [null, null]
+                    items:
+                      type: "null"
+                      description: "TODO: This is an unknown type"
+                  "nodes":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+      x-speakeasy-group: "nodeTypes"
+      x-speakeasy-name-override: "get"
   "/api/v1/state":
+    options:
+      summary: "use to set the summary"
+      description: "use jsdoc tag to set the description"
+      responses:
+        "200":
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+      x-speakeasy-group: "state"
+      x-speakeasy-name-override: "options"
     get:
       summary: "use to set the summary"
       description: "use jsdoc tag to set the description"
@@ -21,7 +111,30 @@ paths:
         "200":
           description: "unknown return type: ReturnStatement"
           content:
-            "application/json": {}
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "nodes":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "edges":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "nodesById":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "edgesById":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "nodesHash":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "edgesHash":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+      x-speakeasy-group: "state"
+      x-speakeasy-name-override: "get"
     post:
       summary: "use to set the summary"
       description: "use jsdoc tag to set the description"
@@ -29,7 +142,27 @@ paths:
         "200":
           description: "unknown return type: ReturnStatement"
           content:
-            "application/json": {}
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "nodesHash":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "edgesHash":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "updated":
+                    type: "object"
+                    properties:
+                      "nodes":
+                        type: "null"
+                        description: "TODO: This is an unknown type"
+                      "edges":
+                        type: "null"
+                        description: "TODO: This is an unknown type"
+      x-speakeasy-group: "state"
+      x-speakeasy-name-override: "update"
   "/api/v1/x":
     post:
       summary: "use to set the summary"
@@ -49,5 +182,109 @@ paths:
           description: "unknown return type: ReturnStatement"
           content:
             "application/json": {}
+      x-speakeasy-group: "resources"
+      x-speakeasy-name-override: "postX"
+  "/api/v1/trigger/{triggerId}":
+    post:
+      summary: "use to set the summary"
+      description: "use jsdoc tag to set the description"
+      parameters:
+        - name: "triggerId"
+          schema:
+            type: "string"
+          in: "path"
+      responses:
+        default:
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+        "200":
+          description: "TODO: grab this from jsdoc and add a default"
+          content:
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "success":
+                    type: "boolean"
+                    example: true
+                  "executionId":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "triggerExecutionId":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+      x-speakeasy-group: "triggers"
+      x-speakeasy-name-override: "executeById"
+    get:
+      summary: "use to set the summary"
+      description: "use jsdoc tag to set the description"
+      parameters:
+        - name: "triggerId"
+          schema:
+            type: "string"
+          in: "path"
+      responses:
+        default:
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+        "200":
+          description: "TODO: grab this from jsdoc and add a default"
+          content:
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "id":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "name":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "type":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "enabled":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "workflowId":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "workflowName":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+      x-speakeasy-group: "triggers"
+      x-speakeasy-name-override: "getById"
+  "/api/v1/trigger/manual":
+    post:
+      summary: "Manual trigger endpoint for executing workflows on-demand"
+      description: "This endpoint requires authentication via client credentials"
+      responses:
+        default:
+          description: "unknown return type: ReturnStatement"
+          content:
+            "application/json": {}
+        "200":
+          description: "TODO: grab this from jsdoc and add a default"
+          content:
+            "application/json":
+              schema:
+                type: "object"
+                properties:
+                  "success":
+                    type: "boolean"
+                    example: true
+                  "executionId":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "triggerExecutionId":
+                    type: "null"
+                    description: "TODO: This is an unknown type"
+                  "message":
+                    type: "string"
+                    example: "Workflow execution started successfully"
+      x-speakeasy-group: "triggers"
+      x-speakeasy-name-override: "manual"
 servers:
   - url: "https://www.linkage.dev"
