# src/models/operations/getapiv1features.ts
@@ -1,0 +1,65 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v3";
+import { safeParse } from "../../lib/schemas.js";
+import { Result as SafeParseResult } from "../../types/fp.js";
+import { SDKValidationError } from "../errors/sdkvalidationerror.js";
+
+export type Features = {
+  /**
+   * TODO: This is an unknown type
+   */
+  controlBlocks?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  realtimeCollaboration?: any | null | undefined;
+};
+
+/**
+ * TODO: grab this from jsdoc and add a default
+ */
+export type GetApiV1FeaturesResponse = {
+  features?: Features | undefined;
+};
+
+/** @internal */
+export const Features$inboundSchema: z.ZodType<
+  Features,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  controlBlocks: z.nullable(z.any()).optional(),
+  realtimeCollaboration: z.nullable(z.any()).optional(),
+});
+
+export function featuresFromJSON(
+  jsonString: string,
+): SafeParseResult<Features, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => Features$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'Features' from JSON`,
+  );
+}
+
+/** @internal */
+export const GetApiV1FeaturesResponse$inboundSchema: z.ZodType<
+  GetApiV1FeaturesResponse,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  features: z.lazy(() => Features$inboundSchema).optional(),
+});
+
+export function getApiV1FeaturesResponseFromJSON(
+  jsonString: string,
+): SafeParseResult<GetApiV1FeaturesResponse, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => GetApiV1FeaturesResponse$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'GetApiV1FeaturesResponse' from JSON`,
+  );
+}
