# src/models/operations/getapiv1nodeoverlays.ts
@@ -1,0 +1,37 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v3";
+import { safeParse } from "../../lib/schemas.js";
+import { Result as SafeParseResult } from "../../types/fp.js";
+import { SDKValidationError } from "../errors/sdkvalidationerror.js";
+
+/**
+ * TODO: grab this from jsdoc and add a default
+ */
+export type GetApiV1NodeOverlaysResponse = {
+  /**
+   * TODO: This is an unknown type
+   */
+  overlays?: any | null | undefined;
+};
+
+/** @internal */
+export const GetApiV1NodeOverlaysResponse$inboundSchema: z.ZodType<
+  GetApiV1NodeOverlaysResponse,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  overlays: z.nullable(z.any()).optional(),
+});
+
+export function getApiV1NodeOverlaysResponseFromJSON(
+  jsonString: string,
+): SafeParseResult<GetApiV1NodeOverlaysResponse, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => GetApiV1NodeOverlaysResponse$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'GetApiV1NodeOverlaysResponse' from JSON`,
+  );
+}
