# src/models/operations/getapiv1nodetypes.ts
@@ -1,0 +1,44 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v3";
+import { safeParse } from "../../lib/schemas.js";
+import { Result as SafeParseResult } from "../../types/fp.js";
+import { SDKValidationError } from "../errors/sdkvalidationerror.js";
+
+/**
+ * TODO: grab this from jsdoc and add a default
+ */
+export type GetApiV1NodeTypesResponse = {
+  /**
+   * TODO: This is an unknown type
+   */
+  version?: any | null | undefined;
+  versions?: Array<any | null> | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  nodes?: any | null | undefined;
+};
+
+/** @internal */
+export const GetApiV1NodeTypesResponse$inboundSchema: z.ZodType<
+  GetApiV1NodeTypesResponse,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  version: z.nullable(z.any()).optional(),
+  versions: z.array(z.nullable(z.any())).optional(),
+  nodes: z.nullable(z.any()).optional(),
+});
+
+export function getApiV1NodeTypesResponseFromJSON(
+  jsonString: string,
+): SafeParseResult<GetApiV1NodeTypesResponse, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => GetApiV1NodeTypesResponse$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'GetApiV1NodeTypesResponse' from JSON`,
+  );
+}
