# src/models/operations/getapiv1state.ts
@@ -1,0 +1,62 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v3";
+import { safeParse } from "../../lib/schemas.js";
+import { Result as SafeParseResult } from "../../types/fp.js";
+import { SDKValidationError } from "../errors/sdkvalidationerror.js";
+
+/**
+ * unknown return type: ReturnStatement
+ */
+export type GetApiV1StateResponse = {
+  /**
+   * TODO: This is an unknown type
+   */
+  nodes?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  edges?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  nodesById?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  edgesById?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  nodesHash?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  edgesHash?: any | null | undefined;
+};
+
+/** @internal */
+export const GetApiV1StateResponse$inboundSchema: z.ZodType<
+  GetApiV1StateResponse,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  nodes: z.nullable(z.any()).optional(),
+  edges: z.nullable(z.any()).optional(),
+  nodesById: z.nullable(z.any()).optional(),
+  edgesById: z.nullable(z.any()).optional(),
+  nodesHash: z.nullable(z.any()).optional(),
+  edgesHash: z.nullable(z.any()).optional(),
+});
+
+export function getApiV1StateResponseFromJSON(
+  jsonString: string,
+): SafeParseResult<GetApiV1StateResponse, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => GetApiV1StateResponse$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'GetApiV1StateResponse' from JSON`,
+  );
+}
