# src/models/operations/postapiv1state.ts
@@ -1,0 +1,72 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v3";
+import { safeParse } from "../../lib/schemas.js";
+import { Result as SafeParseResult } from "../../types/fp.js";
+import { SDKValidationError } from "../errors/sdkvalidationerror.js";
+
+export type Updated = {
+  /**
+   * TODO: This is an unknown type
+   */
+  nodes?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  edges?: any | null | undefined;
+};
+
+/**
+ * unknown return type: ReturnStatement
+ */
+export type PostApiV1StateResponse = {
+  /**
+   * TODO: This is an unknown type
+   */
+  nodesHash?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  edgesHash?: any | null | undefined;
+  updated?: Updated | undefined;
+};
+
+/** @internal */
+export const Updated$inboundSchema: z.ZodType<Updated, z.ZodTypeDef, unknown> =
+  z.object({
+    nodes: z.nullable(z.any()).optional(),
+    edges: z.nullable(z.any()).optional(),
+  });
+
+export function updatedFromJSON(
+  jsonString: string,
+): SafeParseResult<Updated, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => Updated$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'Updated' from JSON`,
+  );
+}
+
+/** @internal */
+export const PostApiV1StateResponse$inboundSchema: z.ZodType<
+  PostApiV1StateResponse,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  nodesHash: z.nullable(z.any()).optional(),
+  edgesHash: z.nullable(z.any()).optional(),
+  updated: z.lazy(() => Updated$inboundSchema).optional(),
+});
+
+export function postApiV1StateResponseFromJSON(
+  jsonString: string,
+): SafeParseResult<PostApiV1StateResponse, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => PostApiV1StateResponse$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'PostApiV1StateResponse' from JSON`,
+  );
+}
