# src/models/operations/postapiv1triggertriggerid.ts
@@ -1,0 +1,72 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v3";
+import { safeParse } from "../../lib/schemas.js";
+import { Result as SafeParseResult } from "../../types/fp.js";
+import { SDKValidationError } from "../errors/sdkvalidationerror.js";
+
+export type PostApiV1TriggerTriggerIdRequest = {
+  triggerId: string;
+};
+
+/**
+ * TODO: grab this from jsdoc and add a default
+ */
+export type PostApiV1TriggerTriggerIdResponse = {
+  success?: boolean | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  executionId?: any | null | undefined;
+  /**
+   * TODO: This is an unknown type
+   */
+  triggerExecutionId?: any | null | undefined;
+};
+
+/** @internal */
+export type PostApiV1TriggerTriggerIdRequest$Outbound = {
+  triggerId: string;
+};
+
+/** @internal */
+export const PostApiV1TriggerTriggerIdRequest$outboundSchema: z.ZodType<
+  PostApiV1TriggerTriggerIdRequest$Outbound,
+  z.ZodTypeDef,
+  PostApiV1TriggerTriggerIdRequest
+> = z.object({
+  triggerId: z.string(),
+});
+
+export function postApiV1TriggerTriggerIdRequestToJSON(
+  postApiV1TriggerTriggerIdRequest: PostApiV1TriggerTriggerIdRequest,
+): string {
+  return JSON.stringify(
+    PostApiV1TriggerTriggerIdRequest$outboundSchema.parse(
+      postApiV1TriggerTriggerIdRequest,
+    ),
+  );
+}
+
+/** @internal */
+export const PostApiV1TriggerTriggerIdResponse$inboundSchema: z.ZodType<
+  PostApiV1TriggerTriggerIdResponse,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  success: z.boolean().optional(),
+  executionId: z.nullable(z.any()).optional(),
+  triggerExecutionId: z.nullable(z.any()).optional(),
+});
+
+export function postApiV1TriggerTriggerIdResponseFromJSON(
+  jsonString: string,
+): SafeParseResult<PostApiV1TriggerTriggerIdResponse, SDKValidationError> {
+  return safeParse(
+    jsonString,
+    (x) => PostApiV1TriggerTriggerIdResponse$inboundSchema.parse(JSON.parse(x)),
+    `Failed to parse 'PostApiV1TriggerTriggerIdResponse' from JSON`,
+  );
+}
